Corrección de errores estéticos

--- a/src/app/components/user/sidebar/notificaciones/notificaciones.component.html
+++ b/src/app/components/user/sidebar/notificaciones/notificaciones.component.html
@@ -17,7 +17,7 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-icon color="warn">priority_high</mat-icon>
                         <mat-card-subtitle style="color: white;">
@@ -34,7 +34,7 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-icon color="warn">priority_high</mat-icon>
                         <mat-card-subtitle style="color: white;">
@@ -51,7 +51,7 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-icon color="warn">priority_high</mat-icon>
                         <mat-card-subtitle style="color: white;">
@@ -68,7 +68,7 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-card-subtitle style="color: white;">
                             TITULO DE NOTIFICACIÓN
@@ -84,7 +84,7 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-card-subtitle style="color: white;">
                             TITULO DE NOTIFICACIÓN
@@ -100,7 +100,7 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-card-subtitle style="color: white;">
                             TITULO DE NOTIFICACIÓN
@@ -116,7 +116,7 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-card-subtitle style="color: white;">
                             TITULO DE NOTIFICACIÓN
@@ -132,7 +132,39 @@
                     <mat-card-title-group>
                         <mat-card-title style="color: white;">
                             Foro al que pertenece
-                            <hr>
+                            <hr style="border-color: white; width: 166%;">
+                        </mat-card-title>
+                        <mat-card-subtitle style="color: white;">
+                            TITULO DE NOTIFICACIÓN
+                        </mat-card-subtitle>
+                    </mat-card-title-group>
+                </mat-card-header>
+                <mat-card-content style="color: white;">Cuerpo de la notificación</mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <mat-card class="post" style="background-color: #727294;">
+                <mat-card-header>
+                    <mat-card-title-group>
+                        <mat-card-title style="color: white;">
+                            Foro al que pertenece
+                            <hr style="border-color: white; width: 166%;">
+                        </mat-card-title>
+                        <mat-card-subtitle style="color: white;">
+                            TITULO DE NOTIFICACIÓN
+                        </mat-card-subtitle>
+                    </mat-card-title-group>
+                </mat-card-header>
+                <mat-card-content style="color: white;">Cuerpo de la notificación</mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <mat-card class="post" style="background-color: #727294;">
+                <mat-card-header>
+                    <mat-card-title-group>
+                        <mat-card-title style="color: white;">
+                            Foro al que pertenece
+                            <hr style="border-color: white; width: 166%;">
                         </mat-card-title>
                         <mat-card-subtitle style="color: white;">
                             TITULO DE NOTIFICACIÓN
