--- a/src/app/components/user/sidebar/contact-us/contact-us.component.html
+++ b/src/app/components/user/sidebar/contact-us/contact-us.component.html
@@ -29,7 +29,7 @@
         <mat-grid-tile colspan="3">
             <form class="example-form">
                 <mat-form-field class="example-full-width">
-                    <textarea matInput placeholder="descripcion"></textarea>
+                    <textarea matInput placeholder="Descripcion"></textarea>
                 </mat-form-field>
             </form>
         </mat-grid-tile>
