Añadida funcionalidad botón volver atrás

--- a/src/app/components/user/sidebar/mapa/mapa.component.html
+++ b/src/app/components/user/sidebar/mapa/mapa.component.html
@@ -1,6 +1,6 @@
 <div class="fijo">
     <mat-grid-list cols="11" rowHeight="2:1">
-        <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;">arrow_back_ios</mat-icon></mat-grid-tile>
+        <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;" (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
         <mat-grid-tile colspan="9">
             <h1 class="title" style="margin-top: 3%;">MAPA - BUSQUEDA</h1>
         </mat-grid-tile>
