--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* Estilo base para los iconos */
+.mat-icon {
+    font-size: 2vw;
+    /* Tamaño del icono en viewport width (vw) */
+}
+
+/* Media query para ajustar el tamaño del icono en pantallas pequeñas */
+@media screen and (max-width: 600px) {
+    .mat-icon {
+        font-size: 1.5vw;
+        /* Tamaño del icono en pantallas pequeñas */
+    }
+}
