--- a/src/app/components/user/sidebar/faq/faq.component.html
+++ b/src/app/components/user/sidebar/faq/faq.component.html
@@ -12,77 +12,14 @@
 <div class="desplazable">
     <div class="deplegable">
         <mat-accordion>
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 1
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 1</p>
+            <mat-expansion-panel *ngFor="let item of preguntasFrecuentes">
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  {{ item.pregunta }}
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <p>{{ item.respuesta }}</p>
             </mat-expansion-panel>
-
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 2
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 2</p>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 3
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 3</p>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 4
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 4</p>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 5
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 5</p>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 6
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 6</p>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 7
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 7</p>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Pregunta 8
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p>Info pregunta 8</p>
-            </mat-expansion-panel>
-        </mat-accordion>
+          </mat-accordion>          
     </div>
 </div>
