--- a/src/app/components/user/sidebar/sidebar.component.html
+++ b/src/app/components/user/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
             <mat-grid-tile colspan="2"><mat-icon color="accent"
                     routerLink="/sidebar/notificaciones">notifications</mat-icon></mat-grid-tile>
 
-            <mat-grid-tile colspan="7" rowspan="2">
+            <mat-grid-tile colspan="7" rowspan="2" routerLink="/sidebar/perfil">
                 <img mat-sm-image src="./assets/img/badge1.png" alt="Foto de perfil" style="height: 90%;">
             </mat-grid-tile>
 
@@ -38,22 +38,6 @@
                 <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
                 <p class="reputacion">Reputación: 256</p>
             </mat-grid-tile>
-
-            <!-- <mat-grid-tile colspan="2"></mat-grid-tile>
-            <mat-grid-tile colspan="1">
-                <img mat-sm-image src="./assets/img/badge1.png" alt="Foto de perfil" style="height: 40%;">
-            </mat-grid-tile>
-            <mat-grid-tile colspan="1">
-                <img mat-sm-image src="./assets/img/badge1.png" alt="Foto de perfil" style="height: 40%;">
-            </mat-grid-tile>
-            <mat-grid-tile colspan="1">
-                <img mat-sm-image src="./assets/img/badge1.png" alt="Foto de perfil" style="height: 40%;">
-            </mat-grid-tile>
-            <mat-grid-tile colspan="2"></mat-grid-tile> -->
-
-            <!-- <mat-grid-tile colspan="7">
-                <p class="opcion-text">Reputación: 256</p>
-            </mat-grid-tile> -->
 
             <mat-grid-tile colspan="1" routerLink="/sidebar/buscar-piso"><mat-icon
                     color="accent">place</mat-icon></mat-grid-tile>
