--- a/src/app/components/user/sidebar/sidebar.component.html
+++ b/src/app/components/user/sidebar/sidebar.component.html
@@ -39,23 +39,23 @@
                 <p class="reputacion">Reputación: 256</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink="/sidebar/buscar-piso"><mat-icon
+            <mat-grid-tile colspan="1" routerLink="/sidebar/piso"><mat-icon
                     color="accent">place</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="6" mat-align="start" routerLink="/sidebar/buscar-piso">
+            <mat-grid-tile colspan="6" mat-align="start" routerLink="/sidebar/piso">
                 <p class="opcion-text">Buscar piso</p>
             </mat-grid-tile>
 
             <mat-grid-tile colspan="1"></mat-grid-tile>
             <mat-grid-tile colspan="1" routerLink="/sidebar/buscar-piso/lista"><mat-icon
                     color="accent">home</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/buscar-piso/lista">
+            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/piso/lista">
                 <p class="opcion-text">Lista</p>
             </mat-grid-tile>
 
             <mat-grid-tile colspan="1"></mat-grid-tile>
-            <mat-grid-tile colspan="1" routerLink="/sidebar/buscar-piso/mapa"><mat-icon
+            <mat-grid-tile colspan="1" routerLink="/sidebar/piso/mapa"><mat-icon
                     color="accent">map</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/buscar-piso/mapa">
+            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/piso/mapa">
                 <p class="opcion-text">Mapa</p>
             </mat-grid-tile>
 
