--- a/src/app/components/user/sidebar/perfil/perfil.component.html
+++ b/src/app/components/user/sidebar/perfil/perfil.component.html
@@ -9,10 +9,11 @@
 
     <hr class="linea-title">
 
-    <mat-tab-group (selectedTabChange)="cambiarRoute($event)">
-        <mat-tab label="Datos personales"></mat-tab>
-        <mat-tab label="Estadísticas"></mat-tab>
-    </mat-tab-group>
+    <nav mat-tab-nav-bar>
+        <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+        {{link.label}}
+        </a>
+    </nav>
 </div>
 
 <div class="desplazable">
