--- a/src/app/components/admin/sidebar/denuncias-del-foro/denuncias-del-foro.component.html
+++ b/src/app/components/admin/sidebar/denuncias-del-foro/denuncias-del-foro.component.html
@@ -1,3 +1,9 @@
+<!--
+  Título: Denuncias del Foro
+  Descrición: 
+  En esta sección se muestran las denuncias que los usuarios hacen sobre los posts del foro,
+  permitiendo a la administración aprobar o rechazar dichas denuncias.
+-->
 <mat-grid-list cols="2" rowHeight="2:1" style="margin-top: 5px;">
     <ng-container *ngFor="let denuncia of denuncias" style="margin-top: 20%;">
       <div class="container"> <!-- Wrap each set of elements -->
