--- a/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.html
+++ b/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.html
@@ -1,3 +1,12 @@
+<!--
+    Título: Gestión de Usuarios
+    Descripción: 
+    En esta sección se muestran los usuarios registrados en la aplicación, permitiendo 
+    a la administración visualizar su usuario, correo, reputación, edad, número de denuncias,
+    número de posts, y estado.
+    Además, se cuenta con un buscador para encontrar usuarios por nombre y la posibilidad de
+    modificar el estado del usuario.
+-->
 <mat-grid-list cols="6" rowHeight="2:1">
     <mat-grid-tile colspan="1">
         <mat-icon>search</mat-icon>
